--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^6.0.1",
+    "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
-    "@sveltejs/kit": "^2.27.0",
     "svelte": "^5.35.5",
     "svelte-check": "^4.2.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@google/genai": "^1.16.0",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/vite": "^4.1.7",
     "tailwindcss": "^4.1.7"
